--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="row">
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <img class="card-img-top" src="../images/image1.jpg" alt="">
+                    <img class="card-img-top" src="./images/image1.jpg" alt="">
                     <div class="card-body">
                         <h4 class="card-title">Card title</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
@@ -107,7 +107,7 @@
             </div>
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <img class="card-img-top" src="../images/image2.jpg" alt="">
+                    <img class="card-img-top" src="./images/image2.jpg" alt="">
                     <div class="card-body">
                         <h4 class="card-title">Card title</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibusbe neque sequi doloribus totam ut praesentium aut.</p>
@@ -119,7 +119,7 @@
             </div>
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <img class="card-img-top" src="../images/image4.jpg" alt="">
+                    <img class="card-img-top" src="./images/image4.jpg" alt="">
                     <div class="card-body">
                         <h4 class="card-title">Card title</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
