--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Services</a>
@@ -54,7 +54,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-lg-12">
                     <h1 class="display-4 text-white mt-5 mb-2">Eleven Engineering Ltd </h1>
-                    <p class="lead mb-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non possimus ab labore provident mollitia. Id assumenda voluptate earum corporis facere quibusdam quisquam iste ipsa cumque unde nisi, totam quas ipsam.</p>
+                    <p class="lead mb-5 text-white-50">We provide high quality and safe service which fit your timeline and budget</p>
                 </div>
             </div>
         </div>
@@ -67,9 +67,8 @@
             <div class="col-md-8 mb-5">
                 <h2>What We Do</h2>
                 <hr>
-                <p>Eleven Engineering Ltd is a reliable and professional company, providing excellent quality and innovative solutions, in a cost effective, timely matter. We have been providing welding, machining, mechanical and fabrication services to
-                    Ghana and International customers. Our primary focus is in the oil, gas and construction sectors, although Eleven Engineering Ltd has experience in prototyping, General Engineering Services, Petroleum Pipeline Servicing, Welding and
-                    Fabrication, Training and Development, Engineering Consultancy Services, hydraulics, commercial construction, and underground services.</p>
+                <p>Eleven Engineering Ltd provides excellent quality and innovative solutions, in a cost effective, timely matter. We have been providing welding, machining, mechanical and fabrication services to Ghana and International customers
+                </p>
                 <a class="btn btn-primary btn-lg" href="#">Call to Action &raquo;</a>
             </div>
             <div class="col-md-4 mb-5">
