--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+            <p class="m-0 text-center text-white">Copyright &copy; Elevn Engineering 2020</p>
         </div>
         <!-- /.container -->
     </footer>
