--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/business-frontpage.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -23,14 +24,14 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Eleven Engineering</a>
+            <a class="navbar-brand" href="index.html">Eleven Engineering</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home
+                        <a class="nav-link" href="index.html">Home
               <span class="sr-only">(current)</span>
             </a>
                     </li>
@@ -53,8 +54,9 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-lg-12">
-                    <h1 class="display-4 text-white mt-5 mb-2">Eleven Engineering Ltd </h1>
-                    <p class="lead mb-5 text-white-50">We provide high quality and safe service which fit your timeline and budget</p>
+                    <h1 class="display-4 text-white mt-5 mb-2 heading_one">
+                        Welcome to <br> <span>Eleven Engineering Ltd </span> </h1>
+                    <p class="lead mb-5 text-white welcome_text">We provide high quality and safe service which fit your timeline and budget</p>
                 </div>
             </div>
         </div>
@@ -69,7 +71,7 @@
                 <hr>
                 <p>Eleven Engineering Ltd provides excellent quality and innovative solutions, in a cost effective, timely matter. We have been providing welding, machining, mechanical and fabrication services to Ghana and International customers
                 </p>
-                <a class="btn btn-primary btn-lg" href="#">Call to Action &raquo;</a>
+                <a class="btn btn-primary btn-lg" href="about.html">Read more &raquo;</a>
             </div>
             <div class="col-md-4 mb-5">
                 <h2>Contact Us</h2>
@@ -135,11 +137,43 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Elevn Engineering 2020</p>
+
+
+
+    <footer>
+        <div>
+            <div class="mt-5 pt-5 pb-5 footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-5 col-xs-12 about-company">
+                            <h2>Heading</h2>
+                            <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
+                            <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
+                        </div>
+                        <div class="col-lg-3 col-xs-12 links">
+                            <h4 class="mt-lg-0 mt-sm-3">Links</h4>
+                            <ul class="m-0 p-0 footer_links">
+                                <li>- <a href="index.html">Home</a></li>
+                                <li>- <a href="about.html">About</a></li>
+                                <li>- <a href="#">Contact</a></li>
+                                <li>- <a href="#">Services</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-4 col-xs-12 location">
+                            <h4 class="mt-lg-0 mt-sm-4">Location</h4>
+                            <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
+                            <p class="mb-0"><i class="fa fa-phone mr-3"></i>(233) 546773480</p>
+                            <p><i class="fa fa-envelope-o mr-3"></i>11engineerltd@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col copyright">
+                            <p class=""><small class="text-white-50">© 2020. All Rights Reserved.</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <!-- /.container -->
     </footer>
 
     <!-- Bootstrap core JavaScript -->
