--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/business-frontpage.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -22,14 +23,14 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Eleven Engineering</a>
+            <a class="navbar-brand" href="index.html">Eleven Engineering</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home
+                        <a class="nav-link" href="index.html">Home
               <span class="sr-only">(current)</span>
             </a>
                     </li>
@@ -47,31 +48,76 @@
         </div>
     </nav>
     <section>
-
-
         <header class="bg-info py-5 mb-2 about">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
                     <div class="col-lg-12">
-                        <h1 class="display-4 text-white mt-5 mb-2">About </h1>
-                        <p class="lead mb-5 text-white-50">Eleven Engineering Ltd is a reliable and professional company, providing excellent quality and innovative solutions, in a cost effective, timely matter. We have been providing welding, machining, mechanical and fabrication services
-                            to Ghana and International customers. Our primary focus is in the oil, gas and construction sectors, although Eleven Engineering Ltd has experience in prototyping, General Engineering Services, Petroleum Pipeline Servicing,
-                            Welding and Fabrication, Training and Development, Engineering Consultancy Services, hydraulics, commercial construction, and underground services.</p>
+                        <h1 class="display-4 text-white mt-5 mb-2 about">About </h1>
+                        <p class="lead mb-5 text-white about_text">Eleven Engineering Ltd is a reliable and professional company, providing excellent quality and innovative solutions, in a cost effective, timely matter. We have been providing welding, machining, mechanical and fabrication services
+                            to Ghana and International customers. Our primary focus is in the oil, gas and construction sectors. Eleven Engineering Ltd has experience in prototyping, General Engineering Services, Petroleum Pipeline Servicing, Welding
+                            and Fabrication, Training and Development, Engineering Consultancy Services, Hydraulics, Commercial Construction, and Underground Services.</p>
                     </div>
                 </div>
             </div>
         </header>
+    </section>
 
+    <hr class="line">
+
+    <section>
+        <div class=" container vision_mission ">
+            <div class="mission">
+                <h3>OUR MISSION</h3>
+                <p>Eleven Engineering Ltd is committed to providing the highest quality of work. Done right, the first time, on time. We will have our clients up and running, to meet deadlines.</p>
+            </div>
+            <div class="vission">
+                <h3>OUR VISION</h3>
+                <p>A company that provides many aspects of metal, in house, such as welding, machining, forming, custom and production work. We are built on a solid reputation and our strong commitment to our clients. We increase market share through determination.
+                    When a customer wants something made or repaired, large or small, we want them to think of Eleven Engineering Ltd.</p>
+            </div>
+
+        </div>
     </section>
 
 
 
+
+
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+    <footer>
+        <div>
+            <div class="mt-5 pt-5 pb-5 footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-5 col-xs-12 about-company">
+                            <h2>Heading</h2>
+                            <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
+                            <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
+                        </div>
+                        <div class="col-lg-3 col-xs-12 links">
+                            <h4 class="mt-lg-0 mt-sm-3">Links</h4>
+                            <ul class="m-0 p-0 footer_links">
+                                <li>- <a href="index.html">Home</a></li>
+                                <li>- <a href="about.html">About</a></li>
+                                <li>- <a href="#">Contact</a></li>
+                                <li>- <a href="#">Services</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-4 col-xs-12 location">
+                            <h4 class="mt-lg-0 mt-sm-4">Location</h4>
+                            <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
+                            <p class="mb-0"><i class="fa fa-phone mr-3"></i>(233) 546773480</p>
+                            <p><i class="fa fa-envelope-o mr-3"></i>11engineerltd@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col copyright">
+                            <p class=""><small class="text-white-50">© 2020. All Rights Reserved.</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <!-- /.container -->
     </footer>
 
     <!-- Bootstrap core JavaScript -->
