--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About</title>
+    <title>Contact</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="service.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -52,7 +52,7 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
                     <div class="col-lg-12">
-                        <h1 class="display-2 text-white mt-5 mb-2">About Us</h1>
+                        <h1 class="display-2 text-white mt-5 mb-2">Contact Us</h1>
                     </div>
                 </div>
             </div>
@@ -61,31 +61,37 @@
 
     <hr class="line">
 
-    <section class="about_statement">
+    <section class="contact">
         <div>
-            <p class="lead mb-5 text-dark about_text">Eleven Engineering Ltd is a reliable and professional company, providing excellent quality and innovative solutions, in a cost effective, timely matter. We have been providing welding, machining, mechanical and fabrication services to Ghana
-                and International customers. Our primary focus is in the oil, gas and construction sectors. Eleven Engineering Ltd has experience in prototyping, General Engineering Services, Petroleum Pipeline Servicing, Welding and Fabrication, Training
-                and Development, Engineering Consultancy Services, Hydraulics, Commercial Construction, and Underground Services.</p>
+
+            <div>
+
+                <address class="address">
+
+                    <br>B. O. Box AT 2374
+                    <br>Achimota-Accra, GA/R
+                    <br>
+                </address>
+                <address>
+                    <div class="address">
+                    <abbr title="Phone">P:</abbr>
+                    (233) 546773480
+                    </div>
+                    <br>
+                    <div class="address">
+                        <abbr title="Email" >E: </abbr>
+                     <a href="mailto:11engineerltd@gmail.com" class="address">11engineerltd@gmail.com</a>
+
+                    </div>
+            
+             </address>
+            </div>
+
+        </div>
 
         </div>
 
     </section>
-
-    <section>
-        <div class=" container vision_mission ">
-            <div class="mission">
-                <h3>OUR MISSION</h3>
-                <p>Eleven Engineering Ltd is committed to providing the highest quality of work. Done right, the first time, on time. We will have our clients up and running, to meet deadlines.</p>
-            </div>
-            <div class="vission">
-                <h3>OUR VISION</h3>
-                <p>A company that provides many aspects of metal, in house, such as welding, machining, forming, custom and production work. We are built on a solid reputation and our strong commitment to our clients. We increase market share through determination.
-                    When a customer wants something made or repaired, large or small, we want them to think of Eleven Engineering Ltd.</p>
-            </div>
-
-        </div>
-    </section>
-
 
 
 
