--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="service.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -78,43 +78,54 @@
                 <hr>
                 <address>
 
-          <br>B. O. Box AT 2374
-          <br>Achimota-Accra, GA/R
-          <br>
-        </address>
+                    <br>B. O. Box AT 2374
+                    <br>Achimota-Accra, GA/R
+                    <br>
+                </address>
                 <address>
-          <abbr title="Phone">P:</abbr>
-          (233) 546773480
+             <abbr title="Phone">P:</abbr>
+                    (233) 546773480
           <br>
-          <abbr title="Email">E: </abbr>
-          <a href="mailto:11engineerltd@gmail.com">11engineerltd@gmail.com</a>
-        </address>
+            <abbr title="Email">E: </abbr>
+                 <a href="mailto:11engineerltd@gmail.com">11engineerltd@gmail.com</a>
+             </address>
             </div>
         </div>
         <!-- /.row -->
+
+        <hr class="line">
+        <section>
+            <div class="promise">
+                <h2>OUR ON-TIME DELIVERY PROMISE</h2>
+                <h4>We always honour our delivery timeline and your budget!</h4>
+            </div>
+
+        </section>
+        <hr class="line">
 
         <div class="row">
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
                     <img class="card-img-top" src="./images/image1.jpg" alt="">
                     <div class="card-body">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
+                        <h4 class="card-title">Well-Trained Staff</h4>
+                        <p class="card-text">Our team is capable of completing any job. We offer solutions NOT problems</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Find Out More!</a>
+                        <a href="service.html" class="btn btn-primary">Find Out More!</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <img class="card-img-top" src="./images/image2.jpg" alt="">
+                    <img class="card-img-top" src="./images/image10.jpg" alt="welding photo">
                     <div class="card-body">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibusbe neque sequi doloribus totam ut praesentium aut.</p>
+                        <h4 class="card-title">Marine Services</h4>
+                        <p class="card-text">ECS marine services team is second to none. Our approved welders specialize in modifications and repairs of all classes of vessels...
+                        </p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Find Out More!</a>
+                        <a href="service.html" class="btn btn-primary">Find Out More!</a>
                     </div>
                 </div>
             </div>
@@ -122,11 +133,11 @@
                 <div class="card h-100">
                     <img class="card-img-top" src="./images/image4.jpg" alt="">
                     <div class="card-body">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+                        <h4 class="card-title">Environmental Innovation</h4>
+                        <p class="card-text">We strive to find new ways to protect our planet while providing outstanding results</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Find Out More!</a>
+                        <a href="service.html" class="btn btn-primary">Find Out More!</a>
                     </div>
                 </div>
             </div>
@@ -155,20 +166,19 @@
                             <ul class="m-0 p-0 footer_links">
                                 <li>- <a href="index.html">Home</a></li>
                                 <li>- <a href="about.html">About</a></li>
-                                <li>- <a href="#">Contact</a></li>
-                                <li>- <a href="#">Services</a></li>
+                                <li>- <a href="service.html">Services</a></li>
+                                <li>- <a href="contact.html">Contact</a></li>
+
                             </ul>
                         </div>
                         <div class="col-lg-4 col-xs-12 location">
-                            <h4 class="mt-lg-0 mt-sm-4">Location</h4>
-                            <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
                             <p class="mb-0"><i class="fa fa-phone mr-3"></i>(233) 546773480</p>
                             <p><i class="fa fa-envelope-o mr-3"></i>11engineerltd@gmail.com</p>
                         </div>
                     </div>
                     <div class="row mt-5">
                         <div class="col copyright">
-                            <p class=""><small class="text-white-50">© 2020. All Rights Reserved.</small></p>
+                            <p class=""><small class="text-white-50">2020 © Eleven Engineering. All Rights Reserved..</small></p>
                         </div>
                     </div>
                 </div>
