--- a/about.html
+++ b/about.html
@@ -61,18 +61,18 @@
 
     <hr class="line">
 
-    <section class="about_statement">
-        <div>
-            <p class="lead mb-5 text-dark about_text">Eleven Engineering Ltd is a reliable and professional company, providing excellent quality and innovative solutions, in a cost effective, timely matter. We have been providing welding, machining, mechanical and fabrication services to Ghana
+    <section class="container vision_mission">
+        <div class="about_statement">
+            <h3>About ELEVEN ENGINEERING</h3>
+            <p>Eleven Engineering Ltd is a reliable and professional company, providing excellent quality and innovative solutions, in a cost effective, timely matter. We have been providing welding, machining, mechanical and fabrication services to Ghana
                 and International customers. Our primary focus is in the oil, gas and construction sectors. Eleven Engineering Ltd has experience in prototyping, General Engineering Services, Petroleum Pipeline Servicing, Welding and Fabrication, Training
                 and Development, Engineering Consultancy Services, Hydraulics, Commercial Construction, and Underground Services.</p>
-
         </div>
-
     </section>
 
     <section>
-        <div class=" container vision_mission ">
+        <div class="container vision_mission">
+
             <div class="mission">
                 <h3>OUR MISSION</h3>
                 <p>Eleven Engineering Ltd is committed to providing the highest quality of work. Done right, the first time, on time. We will have our clients up and running, to meet deadlines.</p>
