--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
 
                 <address class="address">
 
-                    <br>B. O. Box AT 2374
+                    <br>P. O. Box AT 2374
                     <br>Achimota-Accra, GA/R
                     <br>
                 </address>
