--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <hr>
                 <address>
 
-                    <br>B. O. Box AT 2374
+                    <br>P. O. Box AT 2374
                     <br>Achimota-Accra, GA/R
                     <br>
                 </address>
@@ -94,14 +94,12 @@
         <!-- /.row -->
 
         <hr class="line">
-        <section>
-            <div class="promise">
-                <h2>OUR ON-TIME DELIVERY PROMISE</h2>
-                <h4>We always honour our delivery timeline and your budget!</h4>
-            </div>
 
-        </section>
-        <hr class="line">
+        <div class="vission">
+            <h3>OUR VISION</h3>
+            <p>A company that provides many aspects of metal, in house, such as welding, machining, forming, custom and production work. We are built on a solid reputation and our strong commitment to our clients. We increase market share through determination.
+                When a customer wants something made or repaired, large or small, we want them to think of Eleven Engineering Ltd.</p>
+        </div>
 
         <div class="row">
             <div class="col-md-4 mb-5">
@@ -178,7 +176,7 @@
                     </div>
                     <div class="row mt-5">
                         <div class="col copyright">
-                            <p class=""><small class="text-white-50">2020 © Eleven Engineering. All Rights Reserved..</small></p>
+                            <p class=""><small class="text-white-50">2020 © Eleven Engineering. All Rights Reserved.</small></p>
                         </div>
                     </div>
                 </div>
