--- a/service.html
+++ b/service.html
@@ -55,48 +55,45 @@
 
     <hr class="line">
 
-    <section>
+    <section class="services_content">
         <div class="mines">
             <div class="box1">
-                <p>A company that provides many aspects of metal, in house, such as welding, machining, forming, custom and production work. We are built on a solid reputation and our strong commitment to our clients. We increase market share through determination.
-                    When a customer wants something made or repaired, large or small, we want them to think of Eleven Engineering Ltd.</p>
-            </div>
-            <div class="box2">
                 <h3>Mineral Processing</h3>
                 <p>A company that provides many aspects of metal, in house, such as welding, machining, forming, custom and production work. We are built on a solid reputation and our strong commitment to our clients. We increase market share through determination.
-                    When a customer wants something made or repaired, large or small, we want them to think of Eleven Engineering Ltd.</p>
+                    When a customer wants something made or repaired, large or small, we want them to think of Eleven Engineering Ltd.
+                    <br>
+                    <br>
+                    <button class="service_button ">
+                        <a href="# " class="service_button_link ">read more</a>
+                    </button>
+                </p>
+
             </div>
-
-        </div>
-    </section>
-    <br>
-
-    <section>
-        <div class="oil_gas">
-            <div class="oil_gas_box1">
+            <div class="oil_gas_box2 ">
                 <h3>Oil and Gas</h3>
                 <p>Without protective coatings and linings, sea water can rapidly corrode equipment the oil and gas industry require during the extraction and refining process. Our company offers top-of-the-line coatings, linings, and other products to help
-                    prevent emergency shutdowns to repair or replace parts.</p>
-            </div>
-            <div class="oil_gas_box2">
-                <p>Without protective coatings and linings, sea water can rapidly corrode equipment the oil and gas industry require during the extraction and refining process. Our company offers top-of-the-line coatings, linings, and other products to help
-                    prevent emergency shutdowns to repair or replace parts.</p>
-            </div>
+                    prevent emergency shutdowns to repair or replace parts.
+                    <br>
+                    <br>
+                    <button class="service_button ">
+                        <a href="# " class="service_button_link ">read more</a>
+                    </button>
 
-        </div>
-    </section>
-    <br>
+                </p>
 
-    <section>
-        <div class="marine">
-            <div class="marine_box1">
-                <p>Companies involved in marine industries need specialized machining, fabrication and welding services to maintain their marine assets. We offer full fabrication, mechanical, machining, electrical and hydraulic support dockside or from our
-                    shop for all types of vessels in the marine industry.</p>
             </div>
-            <div class="marine_box2">
+            <div class="marine_box1 ">
                 <h3>Marine</h3>
                 <p>Companies involved in marine industries need specialized machining, fabrication and welding services to maintain their marine assets. We offer full fabrication, mechanical, machining, electrical and hydraulic support dockside or from our
-                    shop for all types of vessels in the marine industry.</p>
+                    shop for all types of vessels in the marine industry.
+                    <br>
+                    <br>
+                    <button class="service_button ">
+                        <a href="# " class="service_button_link ">read more</a>
+                    </button>
+
+                </p>
+
             </div>
 
         </div>
@@ -104,20 +101,27 @@
     <br>
 
 
-    <section class="tecthnical_services">
+    <br>
+
+
+
+
+    <section class="tecthnical_services ">
         <div>
             <h2>Technical Services</h2>
-            <div class="marine_services">
+            <div class="marine_services ">
                 <h3>Marine Services</h3>
                 <p>ECS marine services team is second to none. Our approved welders specialize in modifications and repairs of all classes of vessels. We offer complex or simple repairs and maintenance on vessel hulls, piping, mechanical and hydraulic systems.</p>
+
             </div>
 
-            <div class="field_services">
+            <div class="field_services ">
                 <h3>Field Services</h3>
                 <p>Our wide range of field services is second to none. Each of our field technicians is thoroughly skilled with Structural welding, Pipe welding rubber lining and coatings applications, modifications and repairs. Our technicians can handle
                     any repair or maintenance work quickly using pre-cured or site-cured rubber sheeting. If necessary, we have the capability to bring a mobile facility for shot blasting or water jetting to your location. In addition to installing, replacing
                     and repairing your on-site equipment, we offer service contracts for preventative maintenance which can significantly extend the lifespan of your equipment.
                 </p>
+
 
             </div>
 
@@ -130,31 +134,31 @@
     <!-- Footer -->
     <footer>
         <div>
-            <div class="mt-5 pt-5 pb-5 footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-5 col-xs-12 about-company">
+            <div class="mt-5 pt-5 pb-5 footer ">
+                <div class="container ">
+                    <div class="row ">
+                        <div class="col-lg-5 col-xs-12 about-company ">
                             <h2>Heading</h2>
-                            <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
-                            <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
+                            <p class="pr-5 text-white-50 ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
+                            <p><a href="# "><i class="fa fa-facebook-square mr-1 "></i></a><a href="# "><i class="fa fa-linkedin-square "></i></a></p>
                         </div>
-                        <div class="col-lg-3 col-xs-12 links">
-                            <h4 class="mt-lg-0 mt-sm-3">Links</h4>
-                            <ul class="m-0 p-0 footer_links">
-                                <li>- <a href="index.html">Home</a></li>
-                                <li>- <a href="about.html">About</a></li>
-                                <li>- <a href="service.html">Services</a></li>
-                                <li>- <a href="contact.html">Contact</a></li>
+                        <div class="col-lg-3 col-xs-12 links ">
+                            <h4 class="mt-lg-0 mt-sm-3 ">Links</h4>
+                            <ul class="m-0 p-0 footer_links ">
+                                <li>- <a href="index.html ">Home</a></li>
+                                <li>- <a href="about.html ">About</a></li>
+                                <li>- <a href="service.html ">Services</a></li>
+                                <li>- <a href="contact.html ">Contact</a></li>
                             </ul>
                         </div>
-                        <div class="col-lg-4 col-xs-12 location">
-                            <p class="mb-0"><i class="fa fa-phone mr-3"></i>(233) 546773480</p>
-                            <p><i class="fa fa-envelope-o mr-3"></i>11engineerltd@gmail.com</p>
+                        <div class="col-lg-4 col-xs-12 location ">
+                            <p class="mb-0 "><i class="fa fa-phone mr-3 "></i>(233) 546773480</p>
+                            <p><i class="fa fa-envelope-o mr-3 "></i>11engineerltd@gmail.com</p>
                         </div>
                     </div>
-                    <div class="row mt-5">
-                        <div class="col copyright">
-                            <p class=""><small class="text-white-50">2020 © Eleven Engineering. All Rights Reserved.</small></p>
+                    <div class="row mt-5 ">
+                        <div class="col copyright ">
+                            <p class=" "><small class="text-white-50 ">2020 © Eleven Engineering. All Rights Reserved.</small></p>
                         </div>
                     </div>
                 </div>
@@ -163,8 +167,8 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/jquery/jquery.min.js "></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js "></script>
 
 
 </body>
