--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,11 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top  navebar_color">
         <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="./images/logo.png" alt="logo">
+            </a>
             <a class="navbar-brand" href="index.html">Eleven Engineering</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
