--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top navebar_color">
         <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="./images/logo.png" alt="logo">
+            </a>
             <a class="navbar-brand" href="index.html">Eleven Engineering</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -104,7 +107,7 @@
         <div class="row">
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <img class="card-img-top" src="./images/image1.jpg" alt="">
+                    <img class="card-img-top" src="./images/training.jpg" alt="">
                     <div class="card-body">
                         <h4 class="card-title">Well-Trained Staff</h4>
                         <p class="card-text">Our team is capable of completing any job. We offer solutions NOT problems</p>
@@ -116,7 +119,7 @@
             </div>
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <img class="card-img-top" src="./images/image10.jpg" alt="welding photo">
+                    <img class="card-img-top" src="./images/image2i.jpg" alt="welding photo">
                     <div class="card-body">
                         <h4 class="card-title">Marine Services</h4>
                         <p class="card-text">ECS marine services team is second to none. Our approved welders specialize in modifications and repairs of all classes of vessels...
