--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top  navebar_color">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="./images/logo.png" alt="logo">
+                <img src="./images/logo1.png" alt="logo">
             </a>
             <a class="navbar-brand" href="index.html">Eleven Engineering</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,7 +78,7 @@
                 <address>
                     <div class="address">
                     <abbr title="Phone">P:</abbr>
-                    (233) 546773480
+                    (233) 546773480/546773480
                     </div>
                     <br>
                     <div class="address">
@@ -121,7 +121,7 @@
 
                         </div>
                         <div class="col-lg-4 col-xs-12 location">
-                            <p class="mb-0"><i class="fa fa-phone mr-3"></i>(233) 546773480</p>
+                            <p class="mb-0"><i class="fa fa-phone mr-3"></i>(233) 546773480/546773480</p>
                             <p><i class="fa fa-envelope-o mr-3"></i>11engineerltd@gmail.com</p>
                         </div>
                     </div>
