--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Custom styles for this template -->
     <link href="css/business-frontpage.css" rel="stylesheet">
+    <link href="css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -27,7 +31,7 @@
             <a class="navbar-brand" href="index.html">
                 <img src="./images/logo1.png" alt="logo">
             </a>
-            <a class="navbar-brand" href="index.html">Eleven Engineering</a>
+            <a class="navbar-brand" href="index.html">ELEVEN ENGINEERING LTD</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,8 +45,30 @@
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Inspection
+                        </a>
+                        <ul class="dropdown-menu dropdown_background" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item dropdown_text " href="./inspection/Highway_Tank.html">Highway Tank</a></li>
+                            <li><a class="dropdown-item dropdown_text" href="./inspection/Vendor.html">Vendor</a></li>
+                            <li><a class="dropdown-item dropdown_text" href="./inspection/welding.html">Welding</a></li>
+                            <li><a class="dropdown-item dropdown_text" href="./inspection/QA.html">QA/QC</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Services
+                        </a>
+                        <ul class="dropdown-menu dropdown_background" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item dropdown_text" href="./services/marine.html">Marine</a></li>
+                            <li><a class="dropdown-item dropdown_text" href="./services/oil_and_gas.html">Oil & Gas</a></li>
+                            <li><a class="dropdown-item dropdown_text" href="./services/mineral.html">Mineral</a></li>
+                            <li><a class="dropdown-item dropdown_text" href="./services/field.html">Field</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="service.html">Services</a>
+                        <a class="nav-link" href="training.html">Training</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -59,7 +85,7 @@
                 <div class="col-lg-12">
                     <h1 class="display-4 text-white mt-5 mb-2 heading_one">
                         Welcome to <br> <span>Eleven Engineering Ltd </span> </h1>
-                    <p class="lead mb-5 text-white welcome_text">We provide high quality and safe service which fit your timeline and budget</p>
+                    <p class="lead mb-5 text-white welcome_text">We offer solutions not problem</p>
                 </div>
             </div>
         </div>
@@ -72,7 +98,7 @@
             <div class="col-md-8 mb-5">
                 <h2>What We Do</h2>
                 <hr>
-                <p>Eleven Engineering Ltd provides excellent quality and innovative solutions, in a cost effective, timely matter. We have been providing welding, machining, mechanical and fabrication services to Ghana and International customers
+                <p>We provide high quality and safe service which fit your timeline and budget
                 </p>
                 <a class="btn btn-primary btn-lg" href="about.html">Read more &raquo;</a>
             </div>
@@ -87,7 +113,7 @@
                 </address>
                 <address>
              <abbr title="Phone">P:</abbr>
-                    (233) 546773480
+                    (233) 204741258/546773480
           <br>
             <abbr title="Email">E: </abbr>
                  <a href="mailto:11engineerltd@gmail.com">11engineerltd@gmail.com</a>
@@ -113,7 +139,7 @@
                         <p class="card-text">Our team is capable of completing any job. We offer solutions NOT problems</p>
                     </div>
                     <div class="card-footer">
-                        <a href="service.html" class="btn btn-primary">Find Out More!</a>
+                        <a href="./training.html" class="btn btn-primary">Find Out More!</a>
                     </div>
                 </div>
             </div>
@@ -126,7 +152,7 @@
                         </p>
                     </div>
                     <div class="card-footer">
-                        <a href="service.html" class="btn btn-primary">Find Out More!</a>
+                        <a href="./services/marine.html" class="btn btn-primary">Find Out More!</a>
                     </div>
                 </div>
             </div>
@@ -138,7 +164,7 @@
                         <p class="card-text">We strive to find new ways to protect our planet while providing outstanding results</p>
                     </div>
                     <div class="card-footer">
-                        <a href="service.html" class="btn btn-primary">Find Out More!</a>
+                        <a href="./about.html" class="btn btn-primary">Find Out More!</a>
                     </div>
                 </div>
             </div>
@@ -150,46 +176,73 @@
 
     <!-- Footer -->
 
+    <!-- Footer -->
+    <section id="footer">
+        <div class="container">
+            <div class="row text-center text-xs-center text-sm-left text-md-left">
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5>Quick links</h5>
+                    <ul class="list-unstyled quick-links">
+                        <li><a href="./index.html"><i class="fa fa-angle-double-right"></i>Home</a></li>
+                        <li><a href="./about.html"><i class="fa fa-angle-double-right"></i>About</a></li>
+                        <li><a href="./training.html"><i class="fa fa-angle-double-right"></i>Trainig</a></li>
+                        <li><a href="./contact.html"><i class="fa fa-angle-double-right"></i>Contact Us</a></li>
 
+                    </ul>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5>Services</h5>
+                    <ul class="list-unstyled quick-links">
+                        <li><a href="./services/marine.html"><i class="fa fa-angle-double-right"></i>Marine</a></li>
+                        <li><a href="./services/oil_and_gas.html"><i class="fa fa-angle-double-right"></i>Oil & Gas</a></li>
+                        <li><a href="./services/mineral.html"><i class="fa fa-angle-double-right"></i>Mineral</a></li>
+                        <li><a href="./services/field.html"><i class="fa fa-angle-double-right"></i>Field</a></li>
 
-    <footer>
-        <div>
-            <div class="mt-5 pt-5 pb-5 footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-5 col-xs-12 about-company">
-                            <h2>Heading</h2>
-                            <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
-                            <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
-                        </div>
-                        <div class="col-lg-3 col-xs-12 links">
-                            <h4 class="mt-lg-0 mt-sm-3">Links</h4>
-                            <ul class="m-0 p-0 footer_links">
-                                <li>- <a href="index.html">Home</a></li>
-                                <li>- <a href="about.html">About</a></li>
-                                <li>- <a href="service.html">Services</a></li>
-                                <li>- <a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5>Inspection</h5>
+                    <ul class="list-unstyled quick-links">
+                        <li><a href="./inspection/Highway_Tank.html"><i class="fa fa-angle-double-right"></i>Highway Tank</a></li>
+                        <li><a href="./inspection/Vendor.html"><i class="fa fa-angle-double-right"></i>Vendor</a></li>
+                        <li><a href="./inspection/welding.html"><i class="fa fa-angle-double-right"></i>Weldin</a></li>
+                        <li><a href="./inspection/QA.html"><i class="fa fa-angle-double-right"></i>QA/QC</a></li>
 
-                            </ul>
-                        </div>
-                        <div class="col-lg-4 col-xs-12 location">
-                            <p class="mb-0"><i class="fa fa-phone mr-3"></i>(233) 546773480</p>
-                            <p><i class="fa fa-envelope-o mr-3"></i>11engineerltd@gmail.com</p>
-                        </div>
-                    </div>
-                    <div class="row mt-5">
-                        <div class="col copyright">
-                            <p class=""><small class="text-white-50">2020 © Eleven Engineering. All Rights Reserved.</small></p>
-                        </div>
-                    </div>
+                    </ul>
                 </div>
             </div>
-        </div>
-    </footer>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+                    <ul class="list-unstyled list-inline social text-center">
+                        <li class="list-inline-item"><a href="https://www.linkedin.com/company/eleven-enginerring-ltd" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 
+                        <div class="col-lg-4 col-xs-12 location">
+                            <p class="mb-0"><i class="fa fa-phone mr-3"></i>(233) 546773480/546773480</p>
+                            <p><i class="fa fa-envelope-o mr-3"></i>11engineerltd@gmail.com</p>
+                        </div>
+                    </ul>
+
+                </div>
+                <hr>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
+                    <p class="h6">© All right Reversed.<a class="text-green ml-2" href="https://www.sunlimetech.com" target="_blank">Eleven Engineering Ltd</a></p>
+                </div>
+                <hr>
+            </div>
+        </div>
+    </section>
+    <!-- ./Footer -->
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="./js/index.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 </body>
 
