--- a/about.html
+++ b/about.html
@@ -79,7 +79,6 @@
                 <div class="row h-100 align-items-center">
                     <div class="col-lg-12">
                         <h1 class="display-2 text-white mt-5 mb-2">About Us</h1>
-
                     </div>
                 </div>
             </div>
@@ -115,10 +114,6 @@
         </div>
     </section>
 
-
-
-
-
     <!-- Footer -->
     <!-- Footer -->
     <section id="footer">
@@ -149,7 +144,7 @@
                     <ul class="list-unstyled quick-links">
                         <li><a href="./inspection/Highway_Tank.html"><i class="fa fa-angle-double-right"></i>Highway Tank</a></li>
                         <li><a href="./inspection/Vendor.html"><i class="fa fa-angle-double-right"></i>Vendor</a></li>
-                        <li><a href="./inspection/welding.html"><i class="fa fa-angle-double-right"></i>Weldin</a></li>
+                        <li><a href="./inspection/welding.html"><i class="fa fa-angle-double-right"></i>Welding</a></li>
                         <li><a href="./inspection/QA.html"><i class="fa fa-angle-double-right"></i>QA/QC</a></li>
 
                     </ul>
