--- a/inspection/Highway_Tank.html
+++ b/inspection/Highway_Tank.html
@@ -117,7 +117,7 @@
                     <ul class="list-unstyled quick-links">
                         <li><a href="./Highway_Tank.html"><i class="fa fa-angle-double-right"></i>Highway Tank</a></li>
                         <li><a href="./Vendor.html"><i class="fa fa-angle-double-right"></i>Vendor</a></li>
-                        <li><a href="./welding.html"><i class="fa fa-angle-double-right"></i>Weldin</a></li>
+                        <li><a href="./welding.html"><i class="fa fa-angle-double-right"></i>Welding</a></li>
                         <li><a href="./QA.html"><i class="fa fa-angle-double-right"></i>QA/QC</a></li>
 
                     </ul>
