--- a/services/marine.html
+++ b/services/marine.html
@@ -109,7 +109,7 @@
                     <ul class="list-unstyled quick-links">
                         <li><a href="../inspection/Highway_Tank.html"><i class="fa fa-angle-double-right"></i>Highway Tank</a></li>
                         <li><a href="../inspection/Vendor.html"><i class="fa fa-angle-double-right"></i>Vendor</a></li>
-                        <li><a href="../inspection/welding.html"><i class="fa fa-angle-double-right"></i>Weldin</a></li>
+                        <li><a href="../inspection/welding.html"><i class="fa fa-angle-double-right"></i>Welding</a></li>
                         <li><a href="../inspection/QA.html"><i class="fa fa-angle-double-right"></i>QA/QC</a></li>
 
                     </ul>
